--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "patient-dashboard-react",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://mattvogelsang.github.io/APISkillsTest",
   "dependencies": {
     "chart.js": "^4.5.1",
     "react": "^18.2.0",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -33,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
